Removed unnecessary attributes

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </div>
 
       <form>
-        <input type="email" name="" id="email-input" placeholder="Updates in your inbox…" required>
+        <input type="email" id="email-input" placeholder="Updates in your inbox…" required>
         <button id="sign-up-button">Go</button> 
       </form>
     <p id="copyright">Copyright 2020. All Rights Reserved</p>
